@@ -1,5 +1,13 @@
 2015-07-03  Dan Bernstein  <mitz@apple.com>
 
+        Fixed the iOS build.
+
+        * DumpRenderTree/mac/EventSendingController.mm:
+        (+[EventSendingController isSelectorExcludedFromWebScript:]):
+        (+[EventSendingController webScriptNameForSelector:]):
+
+2015-07-03  Dan Bernstein  <mitz@apple.com>
+
         [Xcode] Update some build settings as recommended by Xcode 7
         https://bugs.webkit.org/show_bug.cgi?id=146597
 
